--- a/RazorCrudUI/Pages/Items/Index.cshtml
+++ b/RazorCrudUI/Pages/Items/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-page="Create" class="btn btn-primary btn-sm"><i class="bi bi-cart-plus"></i> Create New</a>
+    <a asp-page="Create" class="btn btn-primary btn-sm"><i class="bi bi-cart-plus"></i></a>
 </p>
 <table class="table">
     <thead>
@@ -38,9 +38,9 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-page="./Edit" asp-route-id="@item.Id" class="btn btn-secondary text-body">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.Id" class="btn btn-secondary text-body">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-danger text-white">Delete</a>
             </td>
         </tr>
 }
