--- a/RazorCrudUI/Pages/Items/Details.cshtml
+++ b/RazorCrudUI/Pages/Items/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/details/{id}"
 @model RazorCrudUI.Pages.Items.DetailsModel
 
 @{
@@ -7,7 +7,7 @@
 
 <h1>Details</h1>
 
-<div>
+<div class="mb-10">
     <h4>ItemModel</h4>
     <hr />
     <dl class="row">
@@ -30,6 +30,37 @@
             @Html.DisplayFor(model => model.ItemModel.Price)
         </dd>
     </dl>
+</div>
+
+<h1>Details using divs instead of dls and dd/dt</h1>
+
+<div class="mb-10">
+    <h4>ItemModel</h4>
+    <hr />
+    <div class="row">
+        <div class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ItemModel.Name)<label asp-for="ItemModel.Name"></label>
+        </div>
+        <div class="col-sm-10">
+            @Html.DisplayFor(model => model.ItemModel.Name)
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ItemModel.Description)
+        </div>
+        <div class="col-sm-10">
+            @Html.DisplayFor(model => model.ItemModel.Description)
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ItemModel.Price)
+        </div>
+        <div class="col-sm-10">
+            @Html.DisplayFor(model => model.ItemModel.Price)
+        </div>
+    </div>
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.ItemModel.Id">Edit</a> |
