--- a/RazorCrudUI/Pages/Items/Index.cshtml
+++ b/RazorCrudUI/Pages/Items/Index.cshtml
@@ -45,8 +45,8 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                    <a asp-page="./Edit" asp-route-id="@item.Id" class="btn btn-secondary text-body"><i class="bi bi-pencil"></i></a> |
-                    <a asp-page="./Details" asp-route-id="@item.Id" class="btn btn-secondary text-body"><i class="bi bi-info-circle"></i></a> |
+                    <a asp-page="./Edit" asp-route-id="@item.Id" class="btn btn-secondary text-body"><i class="bi bi-pencil"></i></a> 
+                    <a asp-page="./Details" asp-route-id="@item.Id" class="btn btn-secondary text-body"><i class="bi bi-info-circle"></i></a> 
                     <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-danger text-body"><i class="bi bi-x-circle-fill"></i></a>
             </td>
         </tr>
